--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ osqp==0.6.1
 pandas==0.25.1
 pandocfilters==1.4.2
 parso==0.5.1
+patsy==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 prometheus-client==0.7.1
@@ -75,6 +76,7 @@ seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
+statsmodels==0.10.1
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
