--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 absl-py==0.8.0
 appnope==0.1.0
+asn1crypto==1.0.1
 astor==0.8.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
+certifi==2019.9.11
+cffi==1.12.3
+chardet==3.0.4
 Click==7.0
+conda==4.7.12
+conda-package-handling==1.6.0
+cryptography==2.7
 cvxpy==1.0.25
 cycler==0.10.0
 decorator==4.4.0
@@ -19,6 +26,8 @@ gast==0.3.1
 google-pasta==0.1.7
 grpcio==1.23.0
 h5py==2.10.0
+idna==2.8
+importlib-metadata==0.23
 ipdb==0.12.2
 ipykernel==5.1.2
 ipython==7.8.0
@@ -43,9 +52,12 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 missingno==0.4.2
 mistune==0.8.4
+more-itertools==7.2.0
+mpmath==1.1.0
 multiprocess==0.70.8
 nbconvert==5.6.0
 nbformat==4.4.0
+nose==1.3.7
 notebook==6.0.1
 numpy==1.17.1
 osqp==0.6.1
@@ -60,15 +72,21 @@ prompt-toolkit==2.0.9
 protobuf==3.9.1
 ptyprocess==0.6.0
 pyarrow==0.14.1
+pycosat==0.6.3
+pycparser==2.19
 Pygments==2.4.2
+pyOpenSSL==19.0.0
 pyparsing==2.4.2
 pyrsistent==0.15.4
+PySocks==1.7.1
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 pytz==2019.2
 PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
+requests==2.22.0
+ruamel-yaml==0.15.46
 scikit-learn==0.21.3
 scipy==1.3.1
 scs==2.1.1.post2
@@ -77,6 +95,7 @@ Send2Trash==1.5.0
 six==1.12.0
 sklearn==0.0
 statsmodels==0.10.1
+sympy==1.4
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
@@ -84,10 +103,14 @@ termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
+tqdm==4.36.1
 traitlets==4.3.2
+urllib3==1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.15.6
 widgetsnbextension==3.5.1
 wrapt==1.11.2
+xgboost==0.90
 xlrd==1.2.0
+zipp==0.6.0
